[tool.poetry]
name = "lightning-network"
version = "0.1.0"
description = ""
authors = ["Lex Sulzer <lex@dataspects.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
termcolor = "^2.4.0"
terminaltables = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
